codama-macros/tests/codama_attribute/type_nodes/fixed_size_type_node/type_missing.fail.stderr
error: type is missing
 --> tests/codama_attribute/type_nodes/fixed_size_type_node/type_missing.fail.rs:3:17
  |
3 | #[codama(type = fixed_size(42))]
  |                 ^^^^^^^^^^^^^^

error: type is missing
 --> tests/codama_attribute/type_nodes/fixed_size_type_node/type_missing.fail.rs:6:17
  |
6 | #[codama(type = fixed_size(size = 42))]
  |                 ^^^^^^^^^^^^^^^^^^^^^
